deploy/yamls/my-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: my-app
  name: my-app
spec:
  replicas: 2
  selector:
    matchLabels:
      move2kube.konveyor.io/service: my-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        move2kube.konveyor.io/service: my-app
      name: my-app
    spec:
      containers:
        - image: quay.io/myproject/my-app:latest
          imagePullPolicy: Always
          name: my-app
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
      securityContext: {}
status: {}
