deploy/yamls/myproject-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: myproject
  name: myproject
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip  
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - backend:
              service: 
                name: docker-node-mongo-starter
                port: 
                  number: 8080
            path: /docker-node-mongo-starter
            pathType: Prefix
          - backend:
              service: 
                name: my-app
                port: 
                  number: 8080
            path: /my-app
            pathType: Prefix
status:
  loadBalancer: {}
